feat: cosmetic finals - upd .env & .gitignore files - add README.md - add better swagger appearance for model names
